# alpacaauto

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
config/: settings.toml
scripts/: com.local.trading-agent.plist.example  run_agent.sh
src/trading_agent/: agent.py  audit.py  broker_sync.py  cli.py  config.py  dashboard.py  indicators.py  models.py  performance.py  position_manager.py  risk.py
src/trading_agent/brokers/: alpaca.py  base.py
src/trading_agent/research/: crypto.py  news.py  sec.py  service.py
src/trading_agent/screener/: service.py  universe.py
src/trading_agent/strategies/: momentum.py  options.py
tests/: test_agent_caps.py  test_agent_open_orders.py  test_agent_screener.py  test_alpaca_broker.py  test_audit.py  test_broker_sync.py  test_crypto_research.py  test_performance.py  test_position_manager.py  test_research.py  test_risk.py  test_screener.py
