[project]
name = "trading-agent"
version = "0.1.0"
description = "Research, risk, and execution agent for API-first brokerage trading."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "tenacity>=8.2.3",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.1",
]

[project.scripts]
trading-agent = "trading_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
